Update the backend for technician's functionalities